Fix building with libpng15

https://bugzilla.gnome.org/show_bug.cgi?id=664666